--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(필수1)백준 풀이 알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(필수1)백준 풀이 알고리즘 템플릿 - java.md
@@ -24,7 +24,11 @@ typora-root-url: ../../..
 
 * 컴퓨터가 대략 **1억 번의 계산이 1초 내에** 가능하다고 기억(실제론 좀 더 계산)
 
-![image-20230428154114290](/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/image-20230428154114290.png) 
+  <details><summary><b>복잡도 표</b></summary>
+  <div markdown="1"><br>
+  <img src="/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/image-20230428154114290.png" alt="image-20230428154114290" style="zoom:80%;" />
+  </div>
+  </details>
 
 <br>
 
@@ -33,6 +37,38 @@ typora-root-url: ../../..
 * **512MB = 1.2억개의 int**
 
 <br>
+
+<details><summary><b>본인이 생각하는 알고리즘 풀이 과정</b></summary>
+<div markdown="1">
+- 무조건 알고리즘 분석할 때 **"종이, 펜 활용"** 하여 **"복잡도"** 분석
+  - **완.탐 복잡도**는?? -> 가능하다면 **"순.조.부 + 상태트리(BFS,DFS)"** 생각 -> **"[순.조.부 파트](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%88%9C%EC%A1%B0%EB%B6%80--%EB%B9%84%ED%8A%B8-%EC%97%B0%EC%82%B0)"**  
+    -> 완.탐이 가능하다면 **완.탐을 우선 해답 도출 후 성능 개선**을 추천  
+    -> 순.조.부로 문제해석 힘들때 "상태트리" 그려보면 풀이 떠오를 수 있음
+  - 불가능하다면, 혹시 적절한 **자료구조**는??
+  - 또는 완.탐 생각할 필요없이 **"단순구현"** 인지??
+  - 복잡도 너무큰데 해결안되면 **"DP(for, memoi)"** 고려 -> **"[DP 여러가지 유형](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#dp-%EB%8B%A4%EC%96%91%ED%95%9C-%EC%9C%A0%ED%98%95)"**
+    - **DP, 그리디**를 함께 고려하면 좋은데 그리디는 "반례가없다"를 증명하는것이 어려워서 "확신"이 없으면 PASS 하는것을 추천
+    - 참고로 **그리디 유형**에 우리가 아는 알고리즘이 많다.
+      - 프림, 크루스칼, 다익스트라, 플로이드, 힙 등
+  - **최단거리** 같으면 **"BFS와 다익스트라, 플로이드"** 고려 (각각 상황에 맞게 사용하게 됨)
+    - [최단 경로 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-%ED%8A%B8%EB%A6%AC), [보는김에 이것도 확인 -> 최소 신장 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EC%86%8C-%EC%8B%A0%EC%9E%A5-%ED%8A%B8%EB%A6%ACmst)
+  - **"그래프"**, 트리 종류 같다면?? 아래 필수 고려(+BFS, DFS)
+    - **정점** 중심 : **인접행렬(밀집행렬) or 인접리스트(희소행렬)** 
+      - 최소신장트리 : 프림(우선순위 큐)
+      - 최단경로 : 다익스트라(우선순위 큐+new dist배열), 플로이드(3중 for문+new 인접행렬)
+    - **간선** 중심 : **간선리스트**
+      - 최소신장트리 : 크루스칼(Union find)
+      - 최단경로 : 벨만포드
+  - 완.탐, 순.조.부, 최단경로 . . . -> 다양한 예시 참고
+    - [BFS, DFS -> 최단거리는 꼭 "BFS"!!](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#bfs-dfs---%EC%B5%9C%EB%8B%A8%EA%B1%B0%EB%A6%AC%EB%8A%94-%EA%BC%AD-bfs)
+    - [백트래킹(Backtracking) -> DFS(재귀) 사용중](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EB%B0%B1%ED%8A%B8%EB%9E%98%ED%82%B9backtracking---dfs%EC%9E%AC%EA%B7%80-%EC%82%AC%EC%9A%A9%EC%A4%91)
+    - [Branch-and-Bound(분기한정법)](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#branch-and-bound%EB%B6%84%EA%B8%B0%ED%95%9C%EC%A0%95%EB%B2%95)
+- 문제를 꼭 "자세히" 읽고, **"조건 잘 확인"**
+  - 타입 애매하다? `long` 사용
+  - 입력좌표는 `(1,1) 또는 (0,0)` 인가?? + (x,y) 형태가 `(행,열) 또는 (열,행)` 인가??
+- **필수 코드 암기 : [알고리즘 필수 코드암기](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%984)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%95%84%EC%88%98-%EC%BD%94%EB%93%9C%EC%95%94%EA%B8%B0/)**
+</div>
+</details>
 
 **본인이 생각하는 알고리즘 풀이 과정**
 
@@ -65,6 +101,64 @@ typora-root-url: ../../..
 - **필수 코드 암기 : [알고리즘 필수 코드암기](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%984)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%95%84%EC%88%98-%EC%BD%94%EB%93%9C%EC%95%94%EA%B8%B0/)**
 
 <br>
+
+<details><summary><b>아래 자료구조 정도는 기억</b></summary>
+<div markdown="1">
+- 스택&큐&덱, 이분탐색, 해시맵, 우선순위 큐**(+정렬)**
+  - 큐 `ArrayDeque` 상용할것 -> LinkedList 보다 빠름    
+    `Stack<Integer> st = new ArrayDeque<>();`  
+    `Queue<Integer> qu = new ArrayDeque<>();`  
+    `Deque<Integer> qu = new ArrayDeque<>();`
+    - **스택은 push, pop, peek**
+    - **큐는 offer, poll, peek**
+    - **덱은 큐에 First, Last만 추가** -> ex: offerFirst, pollFirst, peekFirst ... 
+    - 아래 정리된 코드들은 **"옛날코드"** 많아서 햇갈리지 말것(스택, 큐)
+  - 이분탐색 : `binarySearch, lower_bound, upper_bound` **직접 구현 방법 기억**
+    - 정리해둔 이분탐색 목차 참고 -> **"[자바의 binarySearch](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9D%B4%EB%B6%84%ED%83%90%EC%83%89binarysearch)"**
+    - 응용 문제 (LIS) -> **"[가장 긴 증가하는 부분 수열 5](https://www.acmicpc.net/problem/14003)"**
+  - 해시맵 : 배열 시간초과.. 정렬.. 필요없고 키,값 형태?? **HashMap** 사용 이런느낌!
+    - 해시 잘 활용한 문제 -> **[백준1620](https://www.acmicpc.net/submit/1620/73125492)**
+  - 우선순위 큐 -> **[백준 나무 재테크](https://www.acmicpc.net/submit/16235/72613091), 이차원 배열...(17140)** 참고 -> **정렬 커스텀** 중요
+    - **compareTo 오버라이딩** 직접 하는게 빠름 -> 예로 `implements Comparable<>`
+    - !qu.isEmpty() 보다 **size** 미리 구해서 사용이 빠름
+    - 우선순위 큐 최대한 낭비없이 사용 권장 -> 그냥 큐도 마찬가지
+    - 정리 참고 -> **"[우선순위 큐](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9A%B0%EC%84%A0%EC%88%9C%EC%9C%84-%ED%81%90)"**
+- 트리, 그래프 -> **"[트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%ED%8A%B8%EB%A6%AC)"**
+  - 탐색부분 체크(트리탐색-BFS,DFS,이진트리순회)
+  - **간선의 수**에 따라 인접행렬, 인접리스트를 선택한다. **보통 인접리스트** 많이 사용
+    - V^2 보다 E가 많이 작을수록(희소행렬) 인접리스트!! 반대는 인접행렬
+  - **트리 -> "중복방문(visited) 걱정없음"** -> 사이클 구조가 될 수 없기 때문!
+    - 힙 - "완전이진트리" + "위 아래 관계" / 힙 응용 - 우선순위 큐
+    - 이진검색트리(=BST) - "좌 우 관계"(정렬유지) / + RBT(정렬유지)
+    - 이진트리 - 자식2개씩 / 포화이진트리 - 꽉찬것 / 완전이진트리 - "왼쪽"부터 이진트리
+  - **그래프 -> "중복방문(visited) 주의"** -> **사이클 탐색(찾기) : visited[], finished[] 사용** -> [백준9466_텀 프로젝트](https://www.acmicpc.net/problem/9466)
+    - dfs(1) 실행 : dfs(1)->dfs(2)->dfs(3)->dfs(1) 사이클때 **dfs(1) 시점에 finished[]가 false라서** 사이클 확인이 가능   
+      dfs(3)->dfs(2)->dfs(1) 순서로 탐색 종료 처리됨(=finished[]가 true되는 순서)
+  - **최단경로트리 vs 최소신장트리**
+    - 비슷한 것 같지만 "서로를 보장(관계)하지 않음"   
+      -> 최단경로라면 꼭 최소신장이고 이런 관계까지 보장하지는 않는다는 것
+    - **최단경로트리** -> 멀리 돌아가더라도 **거리(가중치)가 가장 짧은것**
+      - [최단 경로 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-%ED%8A%B8%EB%A6%AC)
+      - **다익스트라(코드기억)** : **하나의 정점**에서 다른 **모든 정점**으로의 최단경로 -> **우선순위 큐 + 최소거리 배열**
+        - TIP1) X->N 경로 입력 주어지고, 역방향으로 일부러 입력받고아서 N->X였던것을 X-N으로 최단경로구하면 결국 N->X로 최단경로 구해진 값과 동일하다는 개념 (X로 가는 최단경로)
+        - TIP2) N->X 최단경로를 구할 때 차라리 다익스트라를 N번 하는것도 방법 -> N*ElgE 복잡도
+      - **플로이드(코드기억)** : **모든 정점**에서 다른 **모든 정점**으로의 최단경로 -> **3중 for문 + 인접행렬**
+      - 벨만포드 : 다익스트라는 양수만, 벨만포드는 음수도 최단경로 사용 가능
+        - 근데, 벨만포드까지는 코테 잘 안나올것 같아서 나중에 시간나면 보는걸로..
+    - **최소신장트리** -> 돌아가는것을 고려하지 않고 **인접 정점들 중 거리(가중치)가 가장 짧은것**   
+      **사이클X로 모든노드 연결**된 상태 -> 루트노드는 모든노드에 연결 되므로 루트노드 갈 수 있으면 **"신장트리"**가 될 수 있다.  
+      최소신장트리는 모든 정점을 **"연결"하는데 의의**가 있다.
+      - [최소 신장 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EC%86%8C-%EC%8B%A0%EC%9E%A5-%ED%8A%B8%EB%A6%ACmst)
+      - **프림(코드기억)** -> 우선순위 큐
+      - **크루스칼(코드기억)** -> Union find
+        - TIP1) 모든 노드를 조회하는데 최악이나 최선의 비용일 때 MST 활용  
+          [백준13418](https://www.acmicpc.net/problem/13418) 의 경우 "오르막길(최악)", "내리막길(최선)"을 각각 **1, 0으로 임의로 입력**받고,  
+          임의로 입력받은 간선을 **"오름차순, 내림차순"으로 따로 정렬**후 MST를 각각 진행해서 최선, 최악 비용을 구해낼 수 있다.
+- **위상정렬(코드기억)** -> 간단하니 이것도 기억해두자..! -> [위상정렬](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9C%84%EC%83%81-%EC%A0%95%EB%A0%AC)
+  - outArr배열을 dp배열처럼 사용 : bottom-top 방식DP의 **"for문"** 이 **"위상정렬"** 로 **치환**으로 이해하자
+- +개념참고) **최장 증가 부분 수열(LIS)** + 최장 공통 부분 수열(LCS)  -> increasing, common
+</div>
+</details>
 
 **아래 자료구조 정도는 기억**
 
