--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
@@ -208,32 +208,34 @@ typora-root-url: ../../..
     }
     ```
 
-* EX1) 2차원 **배열 회전 로직**은 `B[x][y]=A[N-1-y][x]`
+* EX1) 2차원 **배열 회전 로직??** 반시계: `B[x][y]=A[N-1-y][x]`, 시계: `B[x][y]=A[y][M-1-x]`
   * 단 x,y가 0부터 시작 -> N-1, M-1은 끝자리 인덱스 의미
   * 실제로 좌표 그려보면서 구하면 공식을 금방 도출할 수 있다.
-  * **추가1) 배열돌리기1** 같은 회전 로직은 `rotate(x, y, N, M)` 로 회전로직 구현해놓고,
+  * **추가1) [배열돌리기1](https://www.acmicpc.net/problem/16926)** 같은 회전 로직은 `rotate(x, y, N, M)` 로 회전로직 구현해놓고,
     * **여러 시작점(x,y), 끝점(N,M)** 을 줘서 함수를 재사용!
-  * **추가2) 2차원 "달팽이"**처럼 빙글빙글 돌때 **"범위체크+visited"**로 간단히 구현 가능하다.
-    * **좌표 원복**하고 방향 전환하는 형식이 될 것이다.
-  * **추가3)** **분할정복**(똑같은 크기로 분할 때) -> **좌표이동 ( + 크기** 활용 )
+  * **추가2) "범위체크+visited"**로 구현 가능하다. 
+    * **좌표 원복**하고 방향 전환하는 형식이 될 것이다. 
+  * **추가3)** **분할정복 [Z](https://www.acmicpc.net/problem/1074), [곱셈](https://www.acmicpc.net/problem/1629)**(똑같은 크기로 분할 때) -> **좌표이동 ( + 크기** 활용 )
     * `x+=N` 이나 `y+=N` 같이 좌표 이동을 하되 **특정한 크기(N)** 을 사용한 이동
-    * **최적화 : 원하는값 있는부분으로만 분할정복**
+    * **최적화 : 원하는값 있는 부분으로만 분할정복**
   
 * EX2) **dx, dy**로 1칸씩 같던 것을 **끝까지 이동(while)**하는것 -> dx, dy를 좌표에 더할수록 해당 방향으로 계속 이동 가능하단 점을 알아두자
-  * **추가1) 2048 or 모노미노도미노2** 처럼 **끝까지 이동(while) + 범위 넘으면 원복(--)** 방식 괜찮음
+  * **추가1) [2048](https://www.acmicpc.net/problem/12100) or [모노미노도미노2](https://www.acmicpc.net/problem/20061)** 처럼 **끝까지 이동(while) + 범위 넘으면 원복(--)** 방식 괜찮음
   * 이것을 **"하나의 함수" 로 구성**하여 "각각의 좌표나 행,열"로 **각각 재사용 추천**
   * **"오른쪽 방향일때 오른쪽부터 접근해야하는가"** 이런것도 꼭 고려!
   
-* EX3) **투포인터**의 개념을 잘 생각 -> 두개의 배열을 인덱스 따로 하여 따로 동작하고 싶을때도 있기에 이 개념을 기억해두자 -> [용액_2467 백준](https://www.acmicpc.net/problem/2467)
+* EX3) **투포인터**의 개념을 잘 생각 -> 두개의 배열을 인덱스 따로 하여 따로 동작하고 싶을때도 있기에 이 개념을 기억해두자
+
+  * **[용액_2467 백준](https://www.acmicpc.net/problem/2467)**
 
 * EX4) **배열의 인덱스를 실제 숫자**로 치환하여 생각하는 방식 -> 숫자 빈도수 구하거나 등등...
 
 * EX5) **"빈도수"** 구할때 List[] 도 있지만, **HashMap** 에 담으려 노력해보자 **(자료구조 활용)**
 
   - `Map<Integer, Integer> map = new HashMap<>(); // <number, count>`
-  
+
   - `hm.put("java", hm.getOrDefault("java", 0)+1);` -> **put, get 함수** 기억
-  
+
   - ```java
     Map<Character, Set<Character>> neighborMap = new HashMap<>();
     Set<Character> neighbors = bfs(i, j);
@@ -249,9 +251,9 @@ typora-root-url: ../../..
     //위 코드를 한줄로 만들어주는 computeIfAbsent 메소드도 기억
     neighborMap.computeIfAbsent(country, k -> new HashSet<>()).addAll(neighbors);
     ```
-  
+
   - **HashSet은 중복제거에 활용하기 좋다!! -> 객체는 equals, hashCode 필수!**
-  
+
     - ```java
       Set<Pair> uniquePairs = new HashSet<>();
       for (char neighbor : neighbors) {
@@ -262,17 +264,18 @@ typora-root-url: ../../..
           }
       }//A-B, B-A 구분은 사전 순 정렬로 해결하여 중복을 방지 (오버라이딩 필수)
       ```
-  
+
     - **사용자 클래스의 경우 오버라이딩 안하면 중복 검증에 실패**한다. 일반 타입은 당연히 성공하고!
-  
+
 * EX6) 보통 "시뮬레이션"은 복잡도가 높지않아 **배열 상태를 매번 새로 복제** 잘 고려 -> 한번씩 이런 사소한 할당에서 문제가 발생
   * `int[][] backup = new int[10][10];`
   * 이후에 backtracking 에 사용할 수도 있으니 이런 복제도 잘 고려
-  
-* EX7) 2차원 좌표 **구간합** 방식 -> `sum[i-1][j] ` 와 `현재 가로방향(->) 누적값` 과 `inArr[i][j] 현재값`
+
+* EX7) 2차원 좌표 **구간합** 방식 -> `sum[i-1][j] ` 와 `현재 가로방향(->) 누적값` 과 `inArr[i][j] 현재값` 이 필요
   * 즉, `sum[i][j] = sum[i-1][j](바로위) + 해당 i행의 가로방향(->) 누적값 + inArr[i][j]`
+  * 아래 그림처럼 노랑,파랑,분홍 네모 영역 확장처럼 2차원 좌표 구간합 생성
   * <img src="https://github.com/BH946/bh946.github.io/assets/80165014/fe2ddcdc-0a57-40a8-8b84-81f87b2306b8" alt="image" style="zoom: 33%;" /> 
-  
+
 * EX8) **반시계는 시계방향 3번**과 동일하다 -> **단, 90도일때!!** 90도 아니면 해당아님!!
 
 - EX9) **슬라이딩 윈도우 알고리즘 (Sliding Window)**
@@ -282,14 +285,17 @@ typora-root-url: ../../..
   - **맨 앞 문자는 제거, 새문자가 맨 뒤에 추가** -> 핵심
 
     ```java
-    // ex: dna[]는 "AAACGCTT" 같은 문자열 배열
-    // cnt -> A,C,G,T
+    // "AAACGCTT" 문자열 주어진다 가정
+    // S:전체 문자열 길이 (ex: AAACGCTT->8)
+    // P:전체 문자열에서 뽑을 부분 문자열 길이
+    // dna[]는 "AAACGCTT" 같은 문자열 배열 (ex: dna[0]='A', dna[4]='G')
+    // cnt[]는 빈도수 배열 -> A,C,G,T 외 나머지 문자위치는 Dummy
     static void solve() { 
-        // 맨 앞 P개 처리
+        // 맨 앞 P개 처리 
         for(int i=0; i<P; i++) cnt[ dna[i]-'A' ]++;
         check();
         // P 이후 한 개씩 처리
-        // 이전 P개 중 "맨 앞 문자는 제거, 새문자가 맨 뒤에 추가"
+        // 이전 P개 중 "맨 앞 문자는 제거, 새문자가 맨 뒤에 추가" -> Sliding Window
         for(int i=P; i<S; i++) {
             // 맨 앞 (제거)
             cnt[ dna[i-P]-'A' ]--;
@@ -298,6 +304,12 @@ typora-root-url: ../../..
             check();
         }
     }
+    /*
+    Sliding Window 시각화
+    - 전체 문자열: "AAACGCTT"
+    - 부분 문자열 길이 3가정
+    알고리즘 적용: AAA -> AAC -> ACG -> CGC -> GCT -> CTT
+    */
     ```
 
 - EX10) 테스트케이스(입력)가 몇개인지 모를 때
@@ -317,14 +329,15 @@ typora-root-url: ../../..
   - `Math.abs(p.x - nx) == Math.abs(p.y - ny)` : 행차이와 열차이가 같다면 **"같은 대각선 상에 존재"**
   - 대표로 [N-Queen](https://www.acmicpc.net/problem/9663) 문제 참고!!
 
-- EX12) 참고 : 중위 표기식 -> 후위 표기식 변환법과 후위 표기식 계산방법
+- EX12) 참고 : "중위 표기식 -> 후위 표기식 변환법"과 "후위 표기식 계산" 방법
 
   - `A+B*C-D/E` 를 `ABC*+DE/-` 로 변환법??
-    - **"연산자 스택"**에 **top**이 자신보다 우선순위 낮은 연산자일때까지 **pop** 후 **push** - [참고](https://www.acmicpc.net/submit/1918/55108234)
-
+    - **"연산자 스택"**에 **top**이 자신보다 우선순위 낮은 연산자일때까지 **pop(+아웃풋)** 후 **push** - [후위표기식](https://www.acmicpc.net/submit/1918/55108234)
+      - "(" 연산자는 코드보면 젤 낮은 우선순위로 보고 있음.
+    - **"피연산자"**는 스택 없이 **바로 아웃풋**임!
+    
   - `ABC*+DE/-` 계산법 ??
     - **"스택"**에 'A','B','C' 넣다가 연산자('\*') 만나는순간 **B*C로 연산후** 다시 스택에 **push**
-
 
 <br>
 
