--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
@@ -41,7 +41,7 @@ typora-root-url: ../../..
 <details><summary><b>본인이 생각하는 알고리즘 풀이 과정</b></summary>
 <div markdown="1">
 - 무조건 알고리즘 분석할 때 **"종이, 펜 활용"** 하여 **"복잡도"** 분석
-  - **완.탐 복잡도**는?? -> 가능하다면 **"순.조.부 + 상태트리(BFS,DFS)"** 생각 -> **"[순.조.부 파트](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%88%9C%EC%A1%B0%EB%B6%80--%EB%B9%84%ED%8A%B8-%EC%97%B0%EC%82%B0)"**  
+  - **완.탐 복잡도**는?? -> 가능하다면 **"순.조.부 + 상태트리(BFS,DFS)"** 생각 -> **"[순.조.부 파트](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%88%9C%EC%A1%B0%EB%B6%80--%EB%B9%84%ED%8A%B8-%EC%97%B0%EC%82%B0)"**  
     -> 완.탐이 가능하다면 **완.탐을 우선 해답 도출 후 성능 개선**을 추천  
     -> 순.조.부로 문제해석 힘들때 "상태트리" 그려보면 풀이 떠오를 수 있음
   - 불가능하다면, 혹시 적절한 **자료구조**는??
@@ -69,6 +69,7 @@ typora-root-url: ../../..
 - **필수 코드 암기 : [알고리즘 필수 코드암기](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%984)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%95%84%EC%88%98-%EC%BD%94%EB%93%9C%EC%95%94%EA%B8%B0/)**
 </div>
 </details>
+
 
 <br>
 
@@ -427,7 +428,8 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
 
 **순열(=permutation), 중복순열(개념중요)**
 
-**“순서”**가 의미 있는지, 뽑힌 애들의 각 **“자리”**가 의미 있는지 ⇒ `순열`
+**“순서”**가 의미 있는지, 뽑힌 애들의 각 **“자리”**가 의미 있는지 ⇒ `순열`  
+**사전: n개 중 r개를 뽑아서 일렬로 나열하는 것**
 
 **기호 : nPr, <sub>n</sub>π<sub>r</sub>**
 
@@ -513,7 +515,8 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
 
 **조합(=combination), 중복조합(개념중요)** -> 부분집합에 포함되는 특징
 
-“**순서”**가 의미 없는지, 뽑힌 애들의 각 **“자리”**가 의미 없는지 ⇒ `조합`
+“**순서”**가 의미 없는지, 뽑힌 애들의 각 **“자리”**가 의미 없는지 ⇒ `조합 ` 
+**사전: n개 중 순서를 생각하지 않고 r개를 택하는 것**
 
 **기호 : nCr, nHr**
 
@@ -571,7 +574,8 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
 
 **부분집합(=subset)**-> 조합과 유사
 
-**"있다 or 없다"** 로 경우의 수를 구하면 -> `부분집합`
+**"있다 or 없다"** 로 경우의 수를 구하면 -> `부분집합`  
+**사전: 어떠한 집합이 다른 집합의 부분**
 
 **기호 :  ⊂ 또는 ⊃**
 
