--- a/_posts/Coding_Test/Baekjoon_Test/2025-01-18-(java,백준3190)뱀 - Deque를 활용한 뱀 이동 시뮬레이션.md
+++ b/_posts/Coding_Test/Baekjoon_Test/2025-01-18-(java,백준3190)뱀 - Deque를 활용한 뱀 이동 시뮬레이션.md
@@ -1,5 +1,5 @@
 ---
-title:  "[java,백준12100]2048 Easy - 브루트포스(BFS, DFS)로 최대값 찾기"
+title:  "[java,백준3190]뱀 - Deque를 활용한 뱀 이동 시뮬레이션"
 categories : [BaekjoonTest]
 tag : [백준, 알고리즘, 시뮬레이션, Deque, 구현]
 toc: true
