--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
@@ -528,14 +528,17 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
 
 - 예시 문제
 
-  - 조합 : 주사위를 3번 던져서 모두 다른 수가 나올 수 있는 모든 경우  
-    (단, 123, 132, 321 와 같은 경우는 중복되는 경우로 봄)
+  - 조합 : [N과 M (2)](https://www.acmicpc.net/problem/15650), [백설 공주와 일곱 난쟁이](https://www.acmicpc.net/problem/3040), [스타트와 링크](https://www.acmicpc.net/problem/14889)
+    - 주사위를 3번 던져서 모두 다른 수가 나올 수 있는 모든 경우  
+      (단, 123, 132, 321 와 같은 경우는 중복되는 경우로 봄)
     - 구성 : 동일, 순서 : 다름 -> <sub>6</sub>C<sub>3</sub>
-  - 중복조합 : 주사위를 3번 던진 결과가 다음과 같이 중복 되는 경우를 제외하고 나올 수 있는 모든 경우  
-    (112, 121, 211 -> 중복되는 경우)
+  - 중복조합 : [N과 M (4)](https://www.acmicpc.net/problem/15652)
+    - 주사위를 3번 던진 결과가 다음과 같이 중복 되는 경우를 제외하고 나올 수 있는 모든 경우  
+      (112, 121, 211 -> 중복되는 경우)
     - 구성 : 동일, 순서 : 다름 + 중복(112) -> <sub>6</sub>H<sub>3</sub>
 
-- **예시 코드** -> 반복문은 **노션**에서 참고
+- **예시 코드** -> 반복문은 **노션**에서 참고  
+  **아래 코드엔 없지만 당연히 visited 써서 풀어도 됨 -> 참고: [재귀파트 바로 앞 DFS코드](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9E%AC%EA%B7%80recursion)**
 
   - ```java
     // 조합 nCm
