--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
@@ -44,12 +44,12 @@ typora-root-url: ../../..
   - **완.탐 복잡도**는?? -> 가능하다면 **"순.조.부 + 상태트리(BFS,DFS)"** 생각 -> **"[순.조.부 파트](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%88%9C%EC%A1%B0%EB%B6%80--%EB%B9%84%ED%8A%B8-%EC%97%B0%EC%82%B0)"**  
     -> 완.탐이 가능하다면 **완.탐을 우선 해답 도출 후 성능 개선**을 추천  
     -> 순.조.부로 문제해석 힘들때 "상태트리" 그려보면 풀이 떠오를 수 있음
-  - 불가능하다면, 혹시 적절한 **자료구조**는??
-  - 또는 완.탐 생각할 필요없이 **"단순구현"** 인지??
+  - 불가능하다면, 혹시 적절한 **자료구조**는?? => 아래 자료구조 정리 참고
+  - 또는 완.탐 생각할 필요없이 **"단순구현"** 인지?? => 아래 시뮬레이션 정리 참고
   - 복잡도 너무큰데 해결안되면 **"DP(for, memoi)"** 고려 -> **"[DP 여러가지 유형](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#dp-%EB%8B%A4%EC%96%91%ED%95%9C-%EC%9C%A0%ED%98%95)"**
     - **DP, 그리디**를 함께 고려하면 좋은데 그리디는 "반례가없다"를 증명하는것이 어려워서 "확신"이 없으면 PASS 하는것을 추천
     - 참고로 **그리디 유형**에 우리가 아는 알고리즘이 많다.
-      - 프림, 크루스칼, 다익스트라, 플로이드, 힙 등
+      - 프림, 크루스칼, 다익스트라, 플로이드, 힙 등 -> **"[코드 암기](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%982)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%95%84%EC%88%98-%EC%BD%94%EB%93%9C%EC%95%94%EA%B8%B0/#%EC%9C%84%EC%83%81%EC%A0%95%EB%A0%AC-%ED%94%8C%EB%A1%9C%EC%9D%B4%EB%93%9C-%EB%8B%A4%EC%9D%B5%EC%8A%A4%ED%8A%B8%EB%9D%BC-%ED%94%84%EB%A6%BC-%ED%81%AC%EB%A3%A8%EC%8A%A4%EC%B9%BC)"**
   - **최단거리** 같으면 **"BFS와 다익스트라, 플로이드"** 고려 (각각 상황에 맞게 사용하게 됨)
     - [최단 경로 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-%ED%8A%B8%EB%A6%AC), [보는김에 이것도 확인 -> 최소 신장 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EC%86%8C-%EC%8B%A0%EC%9E%A5-%ED%8A%B8%EB%A6%ACmst)
   - **"그래프"**, 트리 종류 같다면?? 아래 필수 고려(+BFS, DFS)
@@ -69,6 +69,7 @@ typora-root-url: ../../..
 - **필수 코드 암기 : [알고리즘 필수 코드암기](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%984)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%95%84%EC%88%98-%EC%BD%94%EB%93%9C%EC%95%94%EA%B8%B0/)**
 </div>
 </details>
+
 
 
 <br>
@@ -717,13 +718,28 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
 
 <br>
 
-**일반적인 NP 코드**
+**일반적인 NP 코드**  
+한번 더 수도 코드로 설명하자면?
+
+1. 뒤에서부터 첫 번째로 감소하는 인덱스 찾기
+
+2. 뒤에서부터 src[i-1]보다 큰 값 찾기
+
+3. 두 값을 교환
+
+4. i-1위치 뒤쪽을 reverse swap
+
+   꼭대기위치(=i) 부터 맨 마지막 위치(=k)까지 오름차순 정렬이 되는 것  
+   그림의 코드와 동일하며, 3 2 **5 4 1** -> 3 2 **1 4 5** 로 "오름차순 정렬" 됨을 확인!
 
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/d5570b9d-ae73-4747-bbd8-e99dcd570e40) 
 
 <br>
 
 **예시) 조합 - NP활용**
+
+- 아래 생략된 np메소드 코드는 위의 "일반적인 NP 코드"와 동일
+- 따라서 아래 코드의 `index배열`은 NP메소드를 거쳐서 00111에서 01011... 이런식으로 변함
 
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/9abdd16d-c1d5-490f-bce9-0102a69c2c45) 
 
