--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
@@ -69,9 +69,6 @@ typora-root-url: ../../..
 - **필수 코드 암기 : [알고리즘 필수 코드암기](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%984)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%95%84%EC%88%98-%EC%BD%94%EB%93%9C%EC%95%94%EA%B8%B0/)**
 </div>
 </details>
-
-
-
 <br>
 
 <details><summary><b>아래 자료구조 정도는 기억</b></summary>
@@ -86,15 +83,15 @@ typora-root-url: ../../..
     - **덱은 큐에 First, Last만 추가** -> ex: offerFirst, pollFirst, peekFirst ... 
     - 아래 정리된 코드들은 **"옛날코드"** 많아서 햇갈리지 말것(스택, 큐)
   - 이분탐색 : `binarySearch, lower_bound, upper_bound` **직접 구현 방법 기억**
-    - 정리해둔 이분탐색 목차 참고 -> **"[자바의 binarySearch](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9D%B4%EB%B6%84%ED%83%90%EC%83%89binarysearch)"**
+    - 정리해둔 이분탐색 목차 참고 -> **"[자바의 binarySearch](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9D%B4%EB%B6%84%ED%83%90%EC%83%89binarysearch)"**
     - 응용 문제 (LIS) -> **"[가장 긴 증가하는 부분 수열 5](https://www.acmicpc.net/problem/14003)"**
   - 해시맵 : 배열 시간초과.. 정렬.. 필요없고 키,값 형태?? **HashMap** 사용 이런느낌!
     - 해시 잘 활용한 문제 -> **[백준1620](https://www.acmicpc.net/submit/1620/73125492)**
-  - 우선순위 큐 -> **[백준 나무 재테크](https://www.acmicpc.net/submit/16235/72613091), 이차원 배열...(17140)** 참고 -> **정렬 커스텀** 중요
+  - 우선순위 큐 -> **[백준 나무 재테크](https://www.acmicpc.net/submit/16235/72613091), [이차원 배열과 연산](https://www.acmicpc.net/problem/17140)** 참고 -> **정렬 커스텀** 중요
     - **compareTo 오버라이딩** 직접 하는게 빠름 -> 예로 `implements Comparable<>`
     - !qu.isEmpty() 보다 **size** 미리 구해서 사용이 빠름
     - 우선순위 큐 최대한 낭비없이 사용 권장 -> 그냥 큐도 마찬가지
-    - 정리 참고 -> **"[우선순위 큐](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9A%B0%EC%84%A0%EC%88%9C%EC%9C%84-%ED%81%90)"**
+    - 정리 참고 -> **"[우선순위 큐](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9A%B0%EC%84%A0%EC%88%9C%EC%9C%84-%ED%81%90)"**
 - 트리, 그래프 -> **"[트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%ED%8A%B8%EB%A6%AC)"**
   - 탐색부분 체크(트리탐색-BFS,DFS,이진트리순회)
   - **간선의 수**에 따라 인접행렬, 인접리스트를 선택한다. **보통 인접리스트** 많이 사용
@@ -134,6 +131,184 @@ typora-root-url: ../../..
 
 <br>
 
+<details><summary><b>자주 나오는 로직은 그냥 외우자 -> "시뮬레이션(구현)"</b></summary>
+<div markdown="1">
+- EX0) **"정렬 암기"** -> `Long.compare(a.x, b.x) 는 a.x < b.x ? -1 : (a.x==b.x?0:1) 와 동일`  
+  **String**은 `A.compareTo(B)` 활용! (이미 구현된 메소드임)
+  - `정렬`은 **"객체"** 사용시 **객체 class에 오버라이딩** 추천,   
+    **"기본타입"** 사용시 **바로 오버라이딩** 추천 -> 익명 클래스 사용보단 간편한 **람다** 추천
+  - 참고) Arrays.sort(Quick), Collections.sort(Merge)
+  - 참고) lambda 는 @FunctionalInterface 인 경우에만 사용가능 -> ex : Comparator
+    - @FunctionalInterface는 추상 메소드가 1개만 있는것을 보장
+  - **정렬 코드 예시**
+  - ```java
+    // lambda -> 추천!! -> start, end 처럼 "구간 설정"도 가능!!(중요)
+    Arrays.sort(inArr, start, end, (n1, n2) -> n1-n2);
+    PriorityQueue<integer> qu = new PriorityQueue<>((n1,n2)->n1-n2);
+    // 익명함수(클래스) -> 비추
+    PriorityQueue<Node> qu = new PriorityQueue<>( new Comparator<Node>() {
+        @Override
+        public int compare(Node o1, Node o2) { return o1.x - o2.x; }
+    }
+    // 객체 class에 바로 오버라이딩 -> 추천!!
+    static class Node implements Comparable<Node> { 
+    	// 정렬 TIP -> 메소드 사용할지 말지는 자유
+        // Long.compare(a.x, b.x) 는 a.x < b.x ? -1 : (a.x==b.x?0:1) 와 동일
+    	@Override
+        public int compareTo(Node o) { return this.y - o.y; }
+    }
+    ```
+  - **문자열 비교 equals, hasCode 오버라이딩 예시** -> 이것도 객체 만들었다면 필수 필수!! -> **Set**같은 중복제거 자료구조 사용 시 **무조건 오버라이딩 필요**
+    - 첫번째 코드는 좀 더 유연하긴 하다. (instanceof 는 Item 클래스의 서브 클래스도 포함해줌)
+    - **두번째 코드는 좀 더 엄격해서 권장! (동일 클래스만 포함) -> 이걸 기억!**
+    - ```java
+      @Override
+      public int hasCode() {
+          return Objects.hash(itemId, itemNm);
+      }
+      @Override
+      public boolean equals(Object obj) {
+          if (obj instanceof Item) {
+              Item item = (Item) obj;
+              if(this.itemId == Item.itemId && this.itemNm.equals(item.itemNm)) {
+                  return true;
+              }
+              return false;
+          }
+          return false;
+      }
+      ```
+    - ```java
+      static class Pair{
+          char a; char b;
+          public Pair(char a, char b) {
+              this.a=a; this.b=b;
+          }
+          @Override
+          public boolean equals(Object obj){
+              if (this==obj) return true;
+              if (obj == null || this.getClass() != obj.getClass()) return false;
+              Pair p = (Pair) obj;
+              return this.a==p.a && this.b==p.b;
+          }
+          @Override
+          public int hashCode() {
+              return Objects.hash(a, b); //hashCode 도 필수
+          }
+      }
+      ```
+* EX1) 2차원 **배열 회전 로직??** 반시계: `B[x][y]=A[N-1-y][x]`, 시계: `B[x][y]=A[y][M-1-x]`
+  * 단 x,y가 0부터 시작 -> N-1, M-1은 끝자리 인덱스 의미
+  * 실제로 좌표 그려보면서 구하면 공식을 금방 도출할 수 있다.
+  * **추가1) [배열돌리기1](https://www.acmicpc.net/problem/16926)** 같은 회전 로직은 `rotate(x, y, N, M)` 로 회전로직 구현해놓고,
+    * **여러 시작점(x,y), 끝점(N,M)** 을 줘서 함수를 재사용!
+  * **추가2) "범위체크+visited"**로 구현 가능하다. 
+    * **좌표 원복**하고 방향 전환하는 형식이 될 것이다. 
+  * **추가3)** **분할정복 [Z](https://www.acmicpc.net/problem/1074), [곱셈](https://www.acmicpc.net/problem/1629)**(똑같은 크기로 분할 때) -> **좌표이동 ( + 크기** 활용 )
+    * `x+=N` 이나 `y+=N` 같이 좌표 이동을 하되 **특정한 크기(N)** 을 사용한 이동
+    * **최적화 : 원하는값 있는 부분으로만 분할정복**
+* EX2) **dx, dy**로 1칸씩 같던 것을 **끝까지 이동(while)**하는것 -> dx, dy를 좌표에 더할수록 해당 방향으로 계속 이동 가능하단 점을 알아두자
+  * **추가1) [2048](https://www.acmicpc.net/problem/12100) or [모노미노도미노2](https://www.acmicpc.net/problem/20061)** 처럼 **끝까지 이동(while) + 범위 넘으면 원복(--)** 방식 괜찮음
+  * 이것을 **"하나의 함수" 로 구성**하여 "각각의 좌표나 행,열"로 **각각 재사용 추천**
+  * **"오른쪽 방향일때 오른쪽부터 접근해야하는가"** 이런것도 꼭 고려!
+* EX3) **투포인터**의 개념을 잘 생각 -> 두개의 배열을 인덱스 따로 하여 따로 동작하고 싶을때도 있기에 이 개념을 기억해두자
+  * **[용액_2467 백준](https://www.acmicpc.net/problem/2467)**
+* EX4) **배열의 인덱스를 실제 숫자**로 치환하여 생각하는 방식 -> 숫자 빈도수 구하거나 등등...
+* EX5) **"빈도수"** 구할때 List[] 도 있지만, **HashMap** 에 담으려 노력해보자 **(자료구조 활용)**
+  - `Map<Integer, Integer> map = new HashMap<>(); // <number, count>`
+  - `hm.put("java", hm.getOrDefault("java", 0)+1);` -> **put, get 함수** 기억
+  - ```java
+    Map<Character, Set<Character>> neighborMap = new HashMap<>();
+    Set<Character> neighbors = bfs(i, j);
+    char country = grid[i][j];
+    if(neighborMap.get(country) == null) {
+        neighborMap.put(country, neighbors);
+    }
+    else {
+        for (Character c : neighbors) {
+            neighborMap.get(country).add(c);
+        }
+    }
+    //위 코드를 한줄로 만들어주는 computeIfAbsent 메소드도 기억
+    neighborMap.computeIfAbsent(country, k -> new HashSet<>()).addAll(neighbors);
+    ```
+  - **HashSet은 중복제거에 활용하기 좋다!! -> 객체는 equals, hashCode 필수!**
+    - ```java
+      Set<Pair> uniquePairs = new HashSet<>();
+      for (char neighbor : neighbors) {
+          if (country < neighbor) { //asc
+              uniquePairs.add(new Pair(country, neighbor));
+          } else {
+              uniquePairs.add(new Pair(neighbor, country));
+          }
+      }//A-B, B-A 구분은 사전 순 정렬로 해결하여 중복을 방지 (오버라이딩 필수)
+      ```
+    - **사용자 클래스의 경우 오버라이딩 안하면 중복 검증에 실패**한다. 일반 타입은 당연히 성공하고!
+* EX6) 보통 "시뮬레이션"은 복잡도가 높지않아 **배열 상태를 매번 새로 복제** 잘 고려 -> 한번씩 이런 사소한 할당에서 문제가 발생
+  * `int[][] backup = new int[10][10];`
+  * 이후에 backtracking 에 사용할 수도 있으니 이런 복제도 잘 고려
+* EX7) 2차원 좌표 **구간합** 방식 -> `sum[i-1][j] ` 와 `현재 가로방향(->) 누적값` 과 `inArr[i][j] 현재값` 이 필요
+  * 즉, `sum[i][j] = sum[i-1][j](바로위) + 해당 i행의 가로방향(->) 누적값 + inArr[i][j]`
+  * 아래 그림처럼 노랑,파랑,분홍 네모 영역 확장처럼 2차원 좌표 구간합 생성
+  * <img src="https://github.com/BH946/bh946.github.io/assets/80165014/fe2ddcdc-0a57-40a8-8b84-81f87b2306b8" alt="image" style="zoom: 33%;" /> 
+* EX8) **반시계는 시계방향 3번**과 동일하다 -> **단, 90도일때!!** 90도 아니면 해당아님!!
+- EX9) **슬라이딩 윈도우 알고리즘 (Sliding Window)**
+  - [DNA 비밀번호](https://www.acmicpc.net/problem/12891) -> 참고로 "부분문자열" 은 **연속**이다.
+  - **맨 앞 문자는 제거, 새문자가 맨 뒤에 추가** -> 핵심
+  - ```java
+    // "AAACGCTT" 문자열 주어진다 가정
+    // S:전체 문자열 길이 (ex: AAACGCTT->8)
+    // P:전체 문자열에서 뽑을 부분 문자열 길이
+    // dna[]는 "AAACGCTT" 같은 문자열 배열 (ex: dna[0]='A', dna[4]='G')
+    // cnt[]는 빈도수 배열 -> A,C,G,T 외 나머지 문자위치는 Dummy
+    static void solve() { 
+        // 맨 앞 P개 처리 
+        for(int i=0; i<P; i++) cnt[ dna[i]-'A' ]++;
+        check();
+        // P 이후 한 개씩 처리
+        // 이전 P개 중 "맨 앞 문자는 제거, 새문자가 맨 뒤에 추가" -> Sliding Window
+        for(int i=P; i<S; i++) {
+            // 맨 앞 (제거)
+            cnt[ dna[i-P]-'A' ]--;
+            // 맨 뒤 (새로운) (추가)
+            cnt[ dna[i]-'A' ]++;
+            check();
+        }
+    }
+    /*
+    Sliding Window 시각화
+    - 전체 문자열: "AAACGCTT"
+    - 부분 문자열 길이 3가정
+    알고리즘 적용: AAA -> AAC -> ACG -> CGC -> GCT -> CTT
+    */
+    ```
+- EX10) 테스트케이스(입력)가 몇개인지 모를 때
+- ```java
+  BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+  //테케가 몇개인지 모를 때
+  while(true) {
+      String t = br.readLine();
+      if ( t==null || t.length()==0 ) break;
+      //풀이...
+  }
+  ```
+- EX11) 2차원 배열에서 동일한 행,열 뿐만아니라 **"대각선" 유무 알아낼 때**
+  - `Math.abs(p.x - nx) == Math.abs(p.y - ny)` : 행차이와 열차이가 같다면 **"같은 대각선 상에 존재"**
+  - 대표로 [N-Queen](https://www.acmicpc.net/problem/9663) 문제 참고!!
+- EX12) 참고 : "중위 표기식 -> 후위 표기식 변환법"과 "후위 표기식 계산" 방법
+  - `A+B*C-D/E` 를 `ABC*+DE/-` 로 변환법??
+    - **"연산자 스택"**에 **top**이 자신보다 우선순위 낮은 연산자일때까지 **pop(+아웃풋)** 후 **push** - [후위표기식](https://www.acmicpc.net/submit/1918/55108234)
+      - "(" 연산자는 코드보면 젤 낮은 우선순위로 보고 있음.
+    - **"피연산자"**는 스택 없이 **바로 아웃풋**임!
+  - `ABC*+DE/-` 계산법 ??
+    - **"스택"**에 'A','B','C' 넣다가 연산자('\*') 만나는순간 **B*C로 연산후** 다시 스택에 **push**
+</div>
+</details>
+
+
+
+
+
 **자주 나오는 로직은 그냥 외우자 -> "시뮬레이션(구현)"**
 
 - EX0) **"정렬 암기"** -> `Long.compare(a.x, b.x) 는 a.x < b.x ? -1 : (a.x==b.x?0:1) 와 동일`  
@@ -170,45 +345,47 @@ typora-root-url: ../../..
   - **문자열 비교 equals, hasCode 오버라이딩 예시** -> 이것도 객체 만들었다면 필수 필수!! -> **Set**같은 중복제거 자료구조 사용 시 **무조건 오버라이딩 필요**
   
     - 첫번째 코드는 좀 더 유연하긴 하다. (instanceof 는 Item 클래스의 서브 클래스도 포함해줌)
+    
     - **두번째 코드는 좀 더 엄격해서 권장! (동일 클래스만 포함) -> 이걸 기억!**
-  
-    ```java
-    @Override
-    public int hasCode() {
-        return Objects.hash(itemId, itemNm);
-    }
-    @Override
-    public boolean equals(Object obj) {
-        if (obj instanceof Item) {
-            Item item = (Item) obj;
-            if(this.itemId == Item.itemId && this.itemNm.equals(item.itemNm)) {
-                return true;
-            }
-            return false;
-        }
-        return false;
-    }
-    ```
-  
-    ```java
-    static class Pair{
-        char a; char b;
-        public Pair(char a, char b) {
-            this.a=a; this.b=b;
-        }
-        @Override
-        public boolean equals(Object obj){
-            if (this==obj) return true;
-            if (obj == null || this.getClass() != obj.getClass()) return false;
-            Pair p = (Pair) obj;
-            return this.a==p.a && this.b==p.b;
-        }
-        @Override
-        public int hashCode() {
-            return Objects.hash(a, b); //hashCode 도 필수
-        }
-    }
-    ```
+    
+    - ```java
+      @Override
+      public int hasCode() {
+          return Objects.hash(itemId, itemNm);
+      }
+      @Override
+      public boolean equals(Object obj) {
+          if (obj instanceof Item) {
+              Item item = (Item) obj;
+              if(this.itemId == Item.itemId && this.itemNm.equals(item.itemNm)) {
+                  return true;
+              }
+              return false;
+          }
+          return false;
+      }
+      ```
+    
+    - ```java
+      static class Pair{
+          char a; char b;
+          public Pair(char a, char b) {
+              this.a=a; this.b=b;
+          }
+          @Override
+          public boolean equals(Object obj){
+              if (this==obj) return true;
+              if (obj == null || this.getClass() != obj.getClass()) return false;
+              Pair p = (Pair) obj;
+              return this.a==p.a && this.b==p.b;
+          }
+          @Override
+          public int hashCode() {
+              return Objects.hash(a, b); //hashCode 도 필수
+          }
+      }
+      ```
+    
 
 * EX1) 2차원 **배열 회전 로직??** 반시계: `B[x][y]=A[N-1-y][x]`, 시계: `B[x][y]=A[y][M-1-x]`
   * 단 x,y가 0부터 시작 -> N-1, M-1은 끝자리 인덱스 의미
@@ -286,7 +463,7 @@ typora-root-url: ../../..
 
   - **맨 앞 문자는 제거, 새문자가 맨 뒤에 추가** -> 핵심
 
-    ```java
+  - ```java
     // "AAACGCTT" 문자열 주어진다 가정
     // S:전체 문자열 길이 (ex: AAACGCTT->8)
     // P:전체 문자열에서 뽑을 부분 문자열 길이
@@ -316,7 +493,7 @@ typora-root-url: ../../..
 
 - EX10) 테스트케이스(입력)가 몇개인지 모를 때
 
-  ```java
+- ```java
   BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
   //테케가 몇개인지 모를 때
   while(true) {
@@ -325,7 +502,7 @@ typora-root-url: ../../..
       //풀이...
   }
   ```
-
+  
 - EX11) 2차원 배열에서 동일한 행,열 뿐만아니라 **"대각선" 유무 알아낼 때**
 
   - `Math.abs(p.x - nx) == Math.abs(p.y - ny)` : 행차이와 열차이가 같다면 **"같은 대각선 상에 존재"**
@@ -340,6 +517,8 @@ typora-root-url: ../../..
     
   - `ABC*+DE/-` 계산법 ??
     - **"스택"**에 'A','B','C' 넣다가 연산자('\*') 만나는순간 **B*C로 연산후** 다시 스택에 **push**
+
+
 
 <br>
 
