--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
@@ -128,8 +128,6 @@ typora-root-url: ../../..
 - +개념참고) **최장 증가 부분 수열(LIS)** + 최장 공통 부분 수열(LCS)  -> increasing, common
 </div>
 </details>
-
-
 <br>
 
 <details><summary><b>자주 나오는 로직은 그냥 외우자 -> "시뮬레이션(구현)"</b></summary>
@@ -276,12 +274,12 @@ typora-root-url: ../../..
             check();
         }
     }
-    /*
-    Sliding Window 시각화
-    - 전체 문자열: "AAACGCTT"
-    - 부분 문자열 길이 3가정
-    알고리즘 적용: AAA -> AAC -> ACG -> CGC -> GCT -> CTT
-    */
+    //
+    //Sliding Window 시각화
+    // - 전체 문자열: "AAACGCTT"
+    // - 부분 문자열 길이 3가정
+    //알고리즘 적용: AAA -> AAC -> ACG -> CGC -> GCT -> CTT
+    //
     ```
 - EX10) 테스트케이스(입력)가 몇개인지 모를 때
 - ```java
