--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-백준 풀이 알고리즘 템플릿 - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-백준 풀이 알고리즘 템플릿 - cpp.md
@@ -18,7 +18,7 @@ typora-root-url: ../../..
 
 **참고**
 
-- 현재 Java로 알고리즘을 풀고 있어서 "[알고리즘 템플릿 - JAVA](https://bh946.github.io/baekjoon/(필수1)백준-풀이-알고리즘-템플릿-java/)" 가 훨씬 잘 정리되어있다.
+- 현재 Java로 알고리즘을 풀고 있어서 "[알고리즘 템플릿 - JAVA](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%982)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%95%84%EC%88%98-%EC%BD%94%EB%93%9C%EC%95%94%EA%B8%B0/)" 가 훨씬 잘 정리되어있다.
 
 - 아래는 C++ 기준으로 작성되었으며 옛날에 작성했다보니 내용이 많이 부실하다. JAVA 꺼 보는걸 추천
 
