--- a/_posts/Coding_Test/Baekjoon_Concept/2023-02-09-알고리즘 기초 - 수학(개념).md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-02-09-알고리즘 기초 - 수학(개념).md
@@ -14,6 +14,8 @@ typora-root-url: ../../..
 
 **백준 문제 풀면서 마주친 기초 수학 개념**
 
+**코드 정리한게 있는데 이걸 보는걸 추천한다. -> [백준 풀이 알고리즘 템플린-수학](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%88%98%ED%95%99math)**
+
 <br>
 
 <br>
