--- a/_posts/Coding_Test/Baekjoon_Concept/2024-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
@@ -83,6 +83,7 @@ typora-root-url: ../../..
     - **덱은 큐에 First, Last만 추가** -> ex: offerFirst, pollFirst, peekFirst ... 
     - 아래 정리된 코드들은 **"옛날코드"** 많아서 햇갈리지 말것(스택, 큐)
   - 해시맵 : 배열 시간초과.. 정렬.. 필요없고 키,값 형태?? **HashMap** 사용 이런느낌!
+    - **get, put, keySet().iterator() 와 .next()** 정돈 알고 있자
     - 해시 잘 활용한 문제 -> **[백준1620](https://www.acmicpc.net/submit/1620/73125492)**
   - 우선순위 큐 -> **[백준 나무 재테크](https://www.acmicpc.net/submit/16235/72613091), [이차원 배열과 연산](https://www.acmicpc.net/problem/17140)** 참고 -> **정렬 커스텀** 중요
     - **compareTo 오버라이딩** 직접 하는게 빠름 -> 예로 `implements Comparable<>`
