--- a/_posts/Coding_Test/Baekjoon_Test/2023-01-28-(백준)코테 준비 시작(Intro).md
+++ b/_posts/Coding_Test/Baekjoon_Test/2023-01-28-(백준)코테 준비 시작(Intro).md
@@ -28,7 +28,7 @@ typora-root-url: ../../..
     - 특히, [백준 문제집](https://www.acmicpc.net/workbook/top) 여기에 문제집 다양하게 있어서 골라 풀어도 된다.
   - 구현(시뮬레이션) 풀 때
     - 개인적으로 [삼선 SW 기출](https://www.acmicpc.net/workbook/view/1152) 문제집 추천하고, **"프로그래머스에 카카오 문제"**들을 추천한다.
-- **마지막으로 본인이 참고용으로 작성한 "[알고리즘 템플릿 - JAVA](https://bh946.github.io/baekjoon/(필수1)백준-풀이-알고리즘-템플릿-java/)"**
+- **마지막으로 본인이 참고용으로 작성한 "[알고리즘 템플릿 - JAVA](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%982)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%95%84%EC%88%98-%EC%BD%94%EB%93%9C%EC%95%94%EA%B8%B0/)"**
 
 <br>
 
