--- a/_posts/Coding_Test/Baekjoon_Concept/2024-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
@@ -46,12 +46,12 @@ typora-root-url: ../../..
     -> 순.조.부로 문제해석 힘들때 "상태트리" 그려보면 풀이 떠오를 수 있음
   - 불가능하다면, 혹시 적절한 **자료구조**는?? => 아래 자료구조 정리 참고
   - 또는 완.탐 생각할 필요없이 **"단순구현"** 인지?? => 아래 시뮬레이션 정리 참고
-  - 복잡도 너무큰데 해결안되면 **"DP(for, memoi)"** 고려 -> **"[DP 여러가지 유형](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#dp-%EB%8B%A4%EC%96%91%ED%95%9C-%EC%9C%A0%ED%98%95)"**
+  - 복잡도 너무큰데 해결안되면 **"DP(for, memoi)"** 고려 -> **"[DP 여러가지 유형](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#dp-%EB%8B%A4%EC%96%91%ED%95%9C-%EC%9C%A0%ED%98%95)"**
     - **DP, 그리디**를 함께 고려하면 좋은데 그리디는 "반례가없다"를 증명하는것이 어려워서 "확신"이 없으면 PASS 하는것을 추천
     - 참고로 **그리디 유형**에 우리가 아는 알고리즘이 많다.
       - 프림, 크루스칼, 다익스트라, 플로이드, 힙 등 -> **"[코드 암기](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%982)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%95%84%EC%88%98-%EC%BD%94%EB%93%9C%EC%95%94%EA%B8%B0/#%EC%9C%84%EC%83%81%EC%A0%95%EB%A0%AC-%ED%94%8C%EB%A1%9C%EC%9D%B4%EB%93%9C-%EB%8B%A4%EC%9D%B5%EC%8A%A4%ED%8A%B8%EB%9D%BC-%ED%94%84%EB%A6%BC-%ED%81%AC%EB%A3%A8%EC%8A%A4%EC%B9%BC)"**
   - **최단거리** 같으면 **"BFS와 다익스트라, 플로이드"** 고려 (각각 상황에 맞게 사용하게 됨)
-    - [최단 경로 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-%ED%8A%B8%EB%A6%AC), [보는김에 이것도 확인 -> 최소 신장 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EC%86%8C-%EC%8B%A0%EC%9E%A5-%ED%8A%B8%EB%A6%ACmst)
+    - [최단 경로 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-%ED%8A%B8%EB%A6%AC), [보는김에 이것도 확인 -> 최소 신장 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EC%86%8C-%EC%8B%A0%EC%9E%A5-%ED%8A%B8%EB%A6%ACmst)
   - **"그래프"**, 트리 종류 같다면?? 아래 필수 고려(+BFS, DFS)
     - **정점** 중심 : **인접행렬(밀집행렬) or 인접리스트(희소행렬)** 
       - 최소신장트리 : 프림(우선순위 큐)
@@ -60,13 +60,13 @@ typora-root-url: ../../..
       - 최소신장트리 : 크루스칼(Union find)
       - 최단경로 : 벨만포드
   - 완.탐, 순.조.부, 최단경로 . . . -> 다양한 예시 참고
-    - [BFS, DFS -> 최단거리는 꼭 "BFS"!!](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#bfs-dfs---%EC%B5%9C%EB%8B%A8%EA%B1%B0%EB%A6%AC%EB%8A%94-%EA%BC%AD-bfs)
-    - [백트래킹(Backtracking) -> DFS(재귀) 사용중](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EB%B0%B1%ED%8A%B8%EB%9E%98%ED%82%B9backtracking---dfs%EC%9E%AC%EA%B7%80-%EC%82%AC%EC%9A%A9%EC%A4%91)
-    - [Branch-and-Bound(분기한정법)](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#branch-and-bound%EB%B6%84%EA%B8%B0%ED%95%9C%EC%A0%95%EB%B2%95)
+    - [BFS, DFS -> 최단거리는 꼭 "BFS"!!](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#bfs-dfs---%EC%B5%9C%EB%8B%A8%EA%B1%B0%EB%A6%AC%EB%8A%94-%EA%BC%AD-bfs)
+    - [백트래킹(Backtracking) -> DFS(재귀) 사용중](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EB%B0%B1%ED%8A%B8%EB%9E%98%ED%82%B9backtracking---dfs%EC%9E%AC%EA%B7%80-%EC%82%AC%EC%9A%A9%EC%A4%91)
+    - [Branch-and-Bound(분기한정법)](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#branch-and-bound%EB%B6%84%EA%B8%B0%ED%95%9C%EC%A0%95%EB%B2%95)
 - 문제를 꼭 "자세히" 읽고, **"조건 잘 확인"**
   - 타입 애매하다? `long` 사용
   - 입력좌표는 `(1,1) 또는 (0,0)` 인가?? + (x,y) 형태가 `(행,열) 또는 (열,행)` 인가??
-- **필수 코드 암기 : [알고리즘 필수 코드암기](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%984)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%95%84%EC%88%98-%EC%BD%94%EB%93%9C%EC%95%94%EA%B8%B0/)**
+- **필수 코드 암기 : [알고리즘 필수 코드암기](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%982)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%95%84%EC%88%98-%EC%BD%94%EB%93%9C%EC%95%94%EA%B8%B0/)**
 </div>
 </details>
 <br>
@@ -90,9 +90,6 @@ typora-root-url: ../../..
     - !qu.isEmpty() 보다 **size** 미리 구해서 사용이 빠름
     - 우선순위 큐 최대한 낭비없이 사용 권장 -> 그냥 큐도 마찬가지
     - 정리 참고 -> **"[우선순위 큐](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9A%B0%EC%84%A0%EC%88%9C%EC%9C%84-%ED%81%90)"**
-  - 이분탐색 : `binarySearch, lower_bound, upper_bound` **직접 구현 방법 기억**
-    - 정리해둔 이분탐색 목차 참고 -> **"[자바의 binarySearch](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9D%B4%EB%B6%84%ED%83%90%EC%83%89binarysearch)"**
-    - 응용 문제 (LIS) -> **"[가장 긴 증가하는 부분 수열 5](https://www.acmicpc.net/problem/14003)"**
 - 트리, 그래프 -> **"[트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%ED%8A%B8%EB%A6%AC)"**
   - 탐색부분 체크(트리탐색-BFS,DFS,이진트리순회)
   - **간선의 수**에 따라 인접행렬, 인접리스트를 선택한다. **보통 인접리스트** 많이 사용
@@ -126,6 +123,9 @@ typora-root-url: ../../..
           임의로 입력받은 간선을 **"오름차순, 내림차순"으로 따로 정렬**후 MST를 각각 진행해서 최선, 최악 비용을 구해낼 수 있다.
 - **위상정렬(코드기억)** -> 간단하니 이것도 기억해두자..! -> [위상정렬](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9C%84%EC%83%81-%EC%A0%95%EB%A0%AC)
   - outArr배열을 dp배열처럼 사용 : bottom-top 방식DP의 **"for문"** 이 **"위상정렬"** 로 **치환**으로 이해하자
+  - 이분탐색 : `binarySearch, lower_bound, upper_bound` **직접 구현 방법 기억**
+- 정리해둔 이분탐색 목차 참고 -> **"[자바의 binarySearch](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9D%B4%EB%B6%84%ED%83%90%EC%83%89binarysearch)"**
+  - 응용 문제 (LIS) -> **"[가장 긴 증가하는 부분 수열 5](https://www.acmicpc.net/problem/14003)"**
 - +개념참고) **최장 증가 부분 수열(LIS)** + 최장 공통 부분 수열(LCS)  -> increasing, common
 </div>
 </details>
