--- a/_posts/Coding_Test/Baekjoon_Concept/2024-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-01-11-(백준_필수1)백준 풀이 알고리즘 템플릿 - java.md
@@ -73,7 +73,7 @@ typora-root-url: ../../..
 
 <details><summary><b>아래 자료구조 정도는 기억</b></summary>
 <div markdown="1">
-- 스택&큐&덱, 해시맵, 우선순위 큐**(+정렬)**, 이분탐색
+- 스택&큐&덱, 해시맵, 우선순위 큐**(+정렬)**, 무한대 자료형
   - 큐 `ArrayDeque` 상용할것 -> LinkedList 보다 빠름    
     `Stack<Integer> st = new ArrayDeque<>();`  
     `Queue<Integer> qu = new ArrayDeque<>();`  
@@ -90,6 +90,7 @@ typora-root-url: ../../..
     - !qu.isEmpty() 보다 **size** 미리 구해서 사용이 빠름
     - 우선순위 큐 최대한 낭비없이 사용 권장 -> 그냥 큐도 마찬가지
     - 정리 참고 -> **"[우선순위 큐](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%981)%EB%B0%B1%EC%A4%80-%ED%92%80%EC%9D%B4-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9A%B0%EC%84%A0%EC%88%9C%EC%9C%84-%ED%81%90)"**
+  - 무한대 자료형: BigInteger 사용 `dp[0]=BigInteger.valueOf(0)` 이나 `dp[i-1].add(dp[i-2])` 처럼 특정 메소드를 사용!
 - 트리, 그래프 -> **"[트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%ED%8A%B8%EB%A6%AC)"**
   - 탐색부분 체크(트리탐색-BFS,DFS,이진트리순회)
   - **간선의 수**에 따라 인접행렬, 인접리스트를 선택한다. **보통 인접리스트** 많이 사용
