--- a/_posts/Coding_Test/Baekjoon_Test/2025-02-12-(java,백준2749)피보나치 수 3 - 행렬 제곱과 DP를 활용한 최적화.md
+++ b/_posts/Coding_Test/Baekjoon_Test/2025-02-12-(java,백준2749)피보나치 수 3 - 행렬 제곱과 DP를 활용한 최적화.md
@@ -95,7 +95,7 @@ static Long[][] fib(long n) {
 
 ```java
 public class 피보나치수3_2749 {
-  static Long[][] matrix = {{0L, 1L}, {1L, 1L}};
+  static Long[][] matrix = // {0L, 1L}, {1L, 1L}가 할당되게 초기화 ㄱ
   static HashMap<Long, Long[][]> map = new HashMap<>(); //메모이제이션
 
   //행렬 연산 함수
