--- a/_posts/Coding_Test/Baekjoon_Test/2025-02-12-(java,백준2749)피보나치 수 3 - 행렬 제곱과 DP를 활용한 최적화.md
+++ b/_posts/Coding_Test/Baekjoon_Test/2025-02-12-(java,백준2749)피보나치 수 3 - 행렬 제곱과 DP를 활용한 최적화.md
@@ -22,8 +22,8 @@ typora-root-url: ../../..
 
 ![Image](https://github.com/user-attachments/assets/3547176a-f8df-4b6e-8b1d-bbed2f53d5b9) 
 
-n=1일때 대입해보면 왼쪽처럼 {{0,1},{1,1}} 이 나옴을 알 수 있음.   
-만약 n=5면? {{0,1},{1,1}} 을 5번 행렬곱 하면 구해짐.  
+n=1일때 대입해보면 왼쪽처럼 {0,1},{1,1} 이 나옴을 알 수 있음.   
+만약 n=5면? {0,1},{1,1} 을 5번 행렬곱 하면 구해짐.  
 이 행렬식을 이용해서 피보나치 수 구하게 되면 정답 도출은 result\[0][1] 이런식으로 fn 요소만 출력!
 
 <br>
